fix: raw fix more adaptive issues with catalog page (on small and big screens)

--- a/src/app/view/main/catalog/cards/cards-view.css
+++ b/src/app/view/main/catalog/cards/cards-view.css
@@ -61,8 +61,8 @@
   border: 1px solid red;
   /*padding: 64px;*/
   /*margin: -64px;*/
-  padding: 64px 0.625rem 96px 64px;
-  margin: -64px -0.625rem -64px -64px;
+  padding: 64px 1.5rem 96px 64px;
+  margin: -64px 0 -64px -64px;
 }
 
 /*.catalog-swiper-slider-wrapper div:nth-child(4) {*/
